--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="list">
             <li class="list-item">
                 <div>
-                    <h4>Bachelor's Degree in Computer Science, minor in Interactive Arts and Technology</h4>
+                    <p class="item-title">Bachelor's Degree in Computer Science, minor in Interactive Arts and Technology</h4>
                     <p>Simon Fraser University  |  Sep 2021 - Apr 2026</p>
                 </div>
             </li>
@@ -49,7 +49,7 @@
         <ul class="list">
             <li class="list-item">
                 <div>
-                    <h4>Application Developer Co-op</h4>
+                    <p class="item-title">Application Developer Co-op</h4>
                     <p>CIBC  |  Sep 2024 - Apr 2025</p>
                 </div>
             </li>
@@ -60,13 +60,13 @@
         <ul class="list">
             <li class="list-item">
                 <div>
-                    <h4>KOGO - College Social Platform</h4>
+                    <p class="item-title">KOGO - College Social Platform</h4>
                     <p>Full Stack Developer / UI Designer  |  Jan 2024 - Apr 2025</p>
                 </div>
             </li>
             <li class="list-item">
                 <div>
-                    <h4>PlanByYou</h4>
+                    <p class="item-title">PlanByYou</h4>
                     <p>Application Developer  |  Sep 2025 - Dec 2025</p>
                 </div>
             </li>
@@ -79,8 +79,11 @@
         <h2>📞 Contact Me</h2>
         <div class="contact-content">
             <div class="contact-text">
-                <p>Email: hca171@sfu.ca</p>
-                <p>Github: <a href="https://github.com/orkr3426">https://github.com/orkr3426</a></p>
+                <p><b>Email: hca171@sfu.ca</b></p>
+                <div>
+                    <a href="www.linkedin.com/in/kathy-cho-bb6332280"><i class="fa fa-linkedin" style="font-size:48px"></i></a>
+                    <a href="https://github.com/orkr3426"><i class="fa fa-github" style="font-size:48px"></i></a>
+                </div>
             </div>
             <form name="contactForm" onsubmit="return validateForm()">
                 <label for="name">Name:</label>
@@ -93,6 +96,6 @@
             </form>
         </div>
     </div>
+    <script src="main.js" type="text/javascript"></script>
 </body>
-<script src="main.js" type="text/javascript"></script>
 </html>
