--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="list">
             <li class="list-item">
                 <div>
-                    <p class="item-title">Bachelor's Degree in Computer Science, minor in Interactive Arts and Technology</h4>
+                    <p class="item-title">Bachelor's Degree in Computer Science, minor in Interactive Arts and Technology</p>
                     <p>Simon Fraser University  |  Sep 2021 - Apr 2026</p>
                 </div>
             </li>
@@ -49,7 +49,7 @@
         <ul class="list">
             <li class="list-item">
                 <div>
-                    <p class="item-title">Application Developer Co-op</h4>
+                    <p class="item-title">Application Developer Co-op</p>
                     <p>CIBC  |  Sep 2024 - Apr 2025</p>
                 </div>
             </li>
@@ -60,13 +60,13 @@
         <ul class="list">
             <li class="list-item">
                 <div>
-                    <p class="item-title">KOGO - College Social Platform</h4>
+                    <p class="item-title">KOGO - College Social Platform</p>
                     <p>Full Stack Developer / UI Designer  |  Jan 2024 - Apr 2025</p>
                 </div>
             </li>
             <li class="list-item">
                 <div>
-                    <p class="item-title">PlanByYou</h4>
+                    <p class="item-title">PlanByYou</p>
                     <p>Application Developer  |  Sep 2025 - Dec 2025</p>
                 </div>
             </li>
