--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="contact-text">
                 <p><b>Email: hca171@sfu.ca</b></p>
                 <div>
-                    <a href="www.linkedin.com/in/kathy-cho-bb6332280"><i class="fa fa-linkedin" style="font-size:48px"></i></a>
+                    <a href="https://www.linkedin.com/in/kathy-cho-bb6332280/"><i class="fa fa-linkedin" style="font-size:48px"></i></a>
                     <a href="https://github.com/orkr3426"><i class="fa fa-github" style="font-size:48px"></i></a>
                 </div>
             </div>
