Validate and add images

--- a/index.html
+++ b/index.html
@@ -73,17 +73,23 @@
         </ul>
     </div>
     <div class="section images-section">
-
+        <h2>🖼️ Images</h2>
+        <div class="images-container">
+            <img src="assets/IMG_4873.JPG" alt="bag" class="image-item">
+            <img src="assets/IMG_5341.JPG" alt="green cardigan" class="image-item">
+            <img src="assets/IMG_5416.JPG" alt="cheese cake" class="image-item">
+            <img src="assets/IMG_5728.JPG" alt="cat" class="image-item">
+        </div>
     </div>
     <div class="section contact-section">
         <h2>📞 Contact Me</h2>
         <div class="contact-content">
             <div class="contact-text">
-                <p><b>Email: hca171@sfu.ca</b></p>
                 <div>
-                    <a href="https://www.linkedin.com/in/kathy-cho-bb6332280/"><i class="fa fa-linkedin" style="font-size:48px"></i></a>
-                    <a href="https://github.com/orkr3426"><i class="fa fa-github" style="font-size:48px"></i></a>
+                    <a href="https://www.linkedin.com/in/kathy-cho-bb6332280/" aria-label="linkedin address"><i class="fa fa-linkedin" style="font-size:48px"></i></a>
+                    <a href="https://github.com/orkr3426" aria-label="github link"><i class="fa fa-github" style="font-size:48px"></i></a>
                 </div>
+                <p>Email: hca171@sfu.ca</p>
             </div>
             <form name="contactForm" onsubmit="return validateForm()">
                 <label for="name">Name:</label>
