--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="title-section">
+    <div id="nav-section">
         <h1 id="title">Kathy Cho</h1>
         <a href="visualizations.html" class="visualization-link">
-            <p>See my visualization!</p>
-            <i class="fa fa-arrow-right" style="font-size: 18px"></i>
+            <p>Visualization</p>
+        </a>
+        <a href="assignment3.html" class="visualization-link">
+            <p>Video Games Analysis</p>
         </a>
     </div>
     <div class="section intro-section">
@@ -89,7 +91,7 @@
                     <a href="https://www.linkedin.com/in/kathy-cho-bb6332280/" aria-label="linkedin address"><i class="fa fa-linkedin" style="font-size:48px"></i></a>
                     <a href="https://github.com/orkr3426" aria-label="github link"><i class="fa fa-github" style="font-size:48px"></i></a>
                 </div>
-                <p>Email: hca171@sfu.ca</p>
+                <p><b>Email: hca171@sfu.ca</b></p>
             </div>
             <form name="contactForm" onsubmit="return validateForm()">
                 <label for="name">Name:</label>
