--- a/visualizations.html
+++ b/visualizations.html
@@ -15,8 +15,14 @@
     <title>Visualizations</title>
 </head>
 <body>
-    <div id="title-section">
+    <div id="nav-section">
         <h1 id="title"><a href="index.html">Kathy Cho</a></h1>
+        <a href="visualizations.html" class="visualization-link">
+            <p>Visualization</p>
+        </a>
+        <a href="assignment3.html" class="visualization-link">
+            <p>Video Games Analysis</p>
+        </a>
     </div>
 
     <div class="section visualization-section">
