--- a/assignment3.html
+++ b/assignment3.html
@@ -55,8 +55,31 @@
         </a>
     </div>
 
-    <div id="view"></div>
-    <div id="view2"></div>
-    <script src="a3.js" type="module"></script>
+    <p class="vis-label">Which genre is the most popular? - Global Sales by Genre</p>
+    <div id="vis1-1"></div>
+
+    <p class="vis-label">Which platform is popular in which genre? - Platform-Genre Global Sales Heatmap</p>
+    <div id="vis1-2"></div>
+
+    <p class="vis-label">How have total global video game sales changed over time?</p>
+    <div id="vis2-1"></div>
+
+    <p class="vis-label">How do sales trends differ across major platforms over time?</p>
+    <div id="vis2-2"></div>
+
+    <p class="vis-label">Which platforms are most popular in each region?</p>
+    <div id="vis3-1"></div>
+
+    <p class="vis-label">Are some platforms regionally concentrated or globally strong?</p>
+    <div id="vis3-2"></div>
+
+    <p class="vis-label">How do Japanese sales differ from North American sales by genre?</p>
+    <div id="vis4-1"></div>
+
+    <p class="vis-label">Which genre dominated throughout the time?</p>
+    <div id="vis4-2"></div>
+
+
+    <script src="a3.js"></script>
 </body>
 </html>
