--- a/assignment3.html
+++ b/assignment3.html
@@ -55,28 +55,28 @@
         </a>
     </div>
 
-    <p class="vis-label">Which genre is the most popular? - Global Sales by Genre</p>
+    <p class="vis-label">Q: Which genre is the most popular? - Global sales by genre</p>
     <div id="vis1-1"></div>
 
-    <p class="vis-label">Which platform is popular in which genre? - Platform-Genre Global Sales Heatmap</p>
+    <p class="vis-label">Q: Which platform is popular in which genre? - Platform-Genre global sales heatmap</p>
     <div id="vis1-2"></div>
 
-    <p class="vis-label">How have total global video game sales changed over time?</p>
+    <p class="vis-label">Q: How have total global video game sales changed over time? - Global sales trends over time</p>
     <div id="vis2-1"></div>
 
-    <p class="vis-label">How do sales trends differ across major platforms over time?</p>
+    <p class="vis-label">Q: How do sales trends differ across major platforms over time? - Major Platforms trends over time</p>
     <div id="vis2-2"></div>
 
-    <p class="vis-label">Which platforms are most popular in each region?</p>
+    <p class="vis-label">Q: Which platforms are most popular in each region? - Regional popularity stacked bar chart</p>
     <div id="vis3-1"></div>
 
-    <p class="vis-label">Are some platforms regionally concentrated or globally strong?</p>
+    <p class="vis-label">Q: Are some platforms regionally concentrated or globally strong? - Sales per platform heatmap</p>
     <div id="vis3-2"></div>
 
-    <p class="vis-label">How do Japanese sales differ from North American sales by genre?</p>
+    <p class="vis-label">Q: How do Japanese sales differ from North American sales by genre? - Sales in Japan vs Sales in North America by genre</p>
     <div id="vis4-1"></div>
 
-    <p class="vis-label">Which genre dominated throughout the time?</p>
+    <p class="vis-label">Q: Which genre dominated throughout the time? - Genre trends over time</p>
     <div id="vis4-2"></div>
 
 
